--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="item"><img src="images/broadcast1.png"/></div>
-			<div class="item"><img src="images/broadcast2.png"/></div>
-			<div class="item"><img src="images/broadcast3.png"/></div>
-			<div class="item"><img src="images/broadcast4.png"/></div>
-			<div class="item"><img src="images/broadcast5.png"/></div>
-			<div class="item"><img src="images/broadcast6.png"/></div>
+			<div class="item"><img src="broadcast1.png"/></div>
+			<div class="item"><img src="broadcast2.png"/></div>
+			<div class="item"><img src="broadcast3.png"/></div>
+			<div class="item"><img src="broadcast4.png"/></div>
+			<div class="item"><img src="broadcast5.png"/></div>
+			<div class="item"><img src="broadcast6.png"/></div>
 		</div>
 		<style>
 			*{padding: 0;margin: 0;}
