--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
 		<title>测试</title>
 	</head>
 	<body>
+	<audio src="mp3/bgm.mp3" autoplay="autoplay"></audio>
 		<div class="container">
-			<div class="item item1"><img src="broadcast1.png"/></div>
-			<div class="item"><img src="broadcast2.png"/></div>
-			<div class="item"><img src="broadcast3.png"/></div>
-			<div class="item"><img src="broadcast4.png"/></div>
-			<div class="item"><img src="broadcast5.png"/></div>
-			<div class="item"><img src="broadcast6.png"/></div>
+			<div class="item"><img src="img/broadcast1.png"/></div>
 		</div>
 		<style>
 			*{padding: 0;margin: 0;}
