--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>测试</title>
 	</head>
 	<body>
-	<audio src="mp3/bgm.mp3" autoplay="autoplay"></audio>
+	<audio src="mp3/bgm.mp3" controls="controls" autoplay="autoplay"></audio>
 		<div class="container">
 			<div class="item"><img src="img/broadcast1.png"/></div>
 		</div>
