--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>测试</title>
-	</head>
-	<body>
-	<audio src="mp3/bgm.mp3" controls="controls" autoplay="autoplay"></audio>
-		<div class="container">
-			<div class="item"><img src="img/broadcast1.png"/></div>
-		</div>
-		<style>
-			*{padding: 0;margin: 0;}
-			.container{display: grid;grid-template-columns:1fr 1fr 1fr 1fr 1fr;grid-template-rows:auto auto auto;}
-			@keyframes myfirst {
-				from{margin: 0;opacity: 0}
-				to{margin-left: 100px;margin-top: 100px;opacity: 1}
-			}
-			.item{
-				animation: myfirst 1s infinite;
-			}
-		</style>
-	</body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title></title>
+</head>
+<body>
+<audio src="mp3/bgm.mp3" autoplay="autoplay"></audio>
+<div class="container">
+    <div class="item"><img src="img/broadcast1.png"/></div>
+    <div class="text">
+        <h1>写一首诗</h1>
+        <p>写一首诗</p>
+        <p>写一首诗</p>
+        <p>写一首诗</p>
+    </div>
+</div>
+<style>
+    *{padding: 0;margin: 0;}
+    .container{display: grid;grid-template-columns:1fr 1fr 1fr 1fr 1fr;grid-template-rows:auto auto auto;}
+    @keyframes myfirst {
+        0%{margin: 0;opacity: 0}
+        50%{opacity: 1}
+        75%{opacity: 0}
+        100%{opacity:0; }
+    }
+    .text{
+        animation: myfirst 1s infinite;
+    }
+</style>
+</body>
 </html>
