--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <style>
     *{padding: 0;margin: 0;}
-    .container{display: grid;grid-template-columns:1fr 1fr 1fr 1fr 1fr;grid-template-rows:auto auto auto;}
+    .item img{width: 100%;height: 100%;z-index: -1;}
     @keyframes myfirst {
         0%{margin: 0;opacity: 0}
         50%{opacity: 1}
