--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <style>
     *{padding: 0;margin: 0;}
-    .item img{width: 100%;height: 100%;z-index: -1;}
+    .item img{width: 100%;height: 100%;z-index: -1;position: relative;}
     @keyframes myfirst {
         0%{margin: 0;opacity: 0}
         50%{opacity: 1}
@@ -25,6 +25,9 @@
         100%{opacity:0; }
     }
     .text{
+        position: absolute;
+        top: 1%;
+        left: 1%;
         animation: myfirst 1s infinite;
     }
 </style>
