--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<audio src="mp3/laght.mp3" autoplay="autoplay"></audio>
+<audio src="mp3/laght.mp3" autoplay="autoplay" loop="loop"></audio>
 <div class="container">
     <div class="item"><img src="img/broadcast1.png"/></div>
     <div class="text">
