--- a/index.html
+++ b/index.html
@@ -1,36 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <title>给你的诗歌</title>
+    <style type="text/css">
+        body{
+            background-image: url("img/broadcast1.png");
+            background-size: 100% 100%;
+            height:100%;
+        }
+        html{
+            height:100%;
+        }
+        @keyframes myfirst {
+            0% {opacity:0}
+            25% {opacity:100}
+            50% {opacity:0}
+            100% {opacity:0}
+        }
+        @keyframes mysecond{
+            0% {opacity:0}
+            50% {opacity:0}
+            75% {opacity:100}
+            100% {opacity:0}
+        }
+        p{
+            font-size: 100px;
+            position: absolute;
+            width:100%;
+            text-align: center;
+        }
+        #canghai{
+            animation: myfirst 7.47s infinite;
+        }
+        #taotao{
+            animation: mysecond 7.47s infinite;
+        }
+    </style>
+    <script>
+        function audioAutoPlay(id){
+            var audio = document.getElementById(id);
+            audio.play();
+            document.addEventListener("WeixinJSBridgeReady", function () {
+                audio.play();
+            }, false);
+            document.addEventListener('YixinJSBridgeReady', function() {
+                audio.play();
+            }, false);
+        }
+    </script>
 </head>
-<body>
+<body onload="audioAutoPlay('bgm');">
+<audio id="bgm" src="mp3/laght.mp3" preload="auto" autoplay="autoplay"></audio>
+<p id="canghai">沧海笑</p>
+<p id="taotao">滔滔两岸潮</p>
 
-<div class="container">
-    <audio src="mp3/laght.mp3" autoplay="autoplay" loop="loop"></audio>
-    <div class="item"><img src="img/broadcast1.png"/></div>
-    <div class="text">
-        <h1>写一首诗</h1>
-        <p>写一首诗</p>
-        <p>写一首诗</p>
-        <p>写一首诗</p>
-    </div>
-</div>
-<style>
-    *{padding: 0;margin: 0;}
-    .item img{width: 100%;height: 100%;z-index: -1;position: relative;}
-    @keyframes myfirst {
-        0%{margin: 0;opacity: 0}
-        50%{opacity: 1}
-        75%{opacity: 0}
-        100%{opacity:0; }
-    }
-    .text{
-        position: absolute;
-        top: 1%;
-        left: 1%;
-        animation: myfirst 1s infinite;
-    }
-</style>
 </body>
 </html>
