--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="container">
-    <audio preload="auto" autoplay="autoplay">
+    <audio preload="auto" autoplay="autoplay" controls>
         <source src="laght.ogg" type="audio/ogg">
         <source src="mp3/laght.mp3" type="audio/mpeg">
         您的浏览器不支持 audio 元素。
