--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 <body>
 
 <div class="container">
-    <audio preload="auto" autoplay="autoplay" controls>
-        <source src="laght.ogg" type="audio/ogg">
-        <source src="mp3/laght.mp3" type="audio/mpeg">
-        您的浏览器不支持 audio 元素。
+    <audio src="mp3/laght.mp3" autoplay="autoplay" loop="loop">
     </audio>
     <div class="item"><img src="img/broadcast1.png"/></div>
     <div class="text">
@@ -31,7 +28,7 @@
     }
     .text{
         position: absolute;
-        top: 1%;
+        top: 5%;
         left: 1%;
         animation: myfirst 1s infinite;
     }
