--- a/index.html
+++ b/index.html
@@ -2,36 +2,17 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title></title>
+    <title>春夏秋冬</title>
+    <link href="css/css.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
-<div class="container">
-    <audio src="mp3/laght.mp3" autoplay="autoplay" loop="loop">
-    </audio>
-    <div class="item"><img src="img/broadcast1.png"/></div>
-    <div class="text">
-        <h1>写一首诗</h1>
-        <p>写一首诗</p>
-        <p>写一首诗</p>
-        <p>写一首诗</p>
-    </div>
-</div>
+<p class="one">春</p>
+<p class="two">夏</p>
+<p class="three">秋</p>
+<p class="four">冬</p>
 <style>
-    *{padding: 0;margin: 0;}
-    .item img{width: 100%;height: 100%;z-index: -1;position: relative;}
-    @keyframes myfirst {
-        0%{margin: 0;opacity: 0}
-        50%{opacity: 1}
-        75%{opacity: 0}
-        100%{opacity:0; }
-    }
-    .text{
-        position: absolute;
-        top: 5%;
-        left: 1%;
-        animation: myfirst 1s infinite;
-    }
+
 </style>
 </body>
 </html>
