--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>春夏秋冬</title>
-    <link href="css/css.css" rel="stylesheet" type="text/css"/>
+    <title>alert</title>
+    <script>
+        alert("这是一个弹窗")
+    </script>
 </head>
 <body>
 <p class="one">春</p>
 <p class="two">夏</p>
 <p class="three">秋</p>
-<p class="four">冬</p>
+<p class="four">
+    冬<span class="w">文字</span>
+</p>
+
 </body>
 </html>
